# SparkControlplane

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci.yml  (+1 more)
backend/: pyproject.toml
backend/app/: __init__.py  config.py  crypto.py  db.py  main.py  mcp_server.py  middleware.py  models.py  schemas.py
backend/app/routers/: alerts.py  auth.py  backup.py  cluster.py  evals.py  gateway.py  instances.py  jobs.py  logs.py  models.py  nodes.py  playground.py  power.py  schedules.py  status.py  storage.py  usage.py
backend/app/services/: __init__.py  alerts.py  auth.py  backup.py  cluster.py  custom_tasks.py  eval_suites.py  evals.py  instances.py  jobs.py  llm_client.py  models_svc.py  nodeops.py  parsers.py  paths.py  phases.py  ports.py  power.py  public_benchmarks.py  registry.py  s3lite.py  sandbox.py  scheduler.py  status_svc.py  storage.py  telemetry.py  templates.py  usage.py
backend/app/ssh/: __init__.py  client.py  pool.py
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_backup.py  test_exporter_registry.py  test_gateway.py  test_instance_url.py  test_mcp_parity.py  test_migration.py  test_nodes_api.py  test_ports.py  test_power.py  test_scheduler.py  test_storage.py  test_telemetry.py  test_templates.py  test_throttle_xid.py  test_usage.py  test_vllm_metrics.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  EVALS.md  MCP.md  OPERATIONS.md  PLAN-native-topology-settings-mcp.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+23 files in other folders)
